# Scaffold

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
.github/workflows/: build-release.yml
docs/superpowers/plans/: 2026-06-19-project-archiving.md
docs/superpowers/specs/: 2026-06-19-banners-loading-recovery-design.md  2026-06-19-project-archiving-design.md
scripts/: build-release.mjs  gen_icons.py  upload-itch.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CommandPalette.css  CommandPalette.tsx  EmptyState.css  EmptyState.tsx  ErrorBoundary.css  ErrorBoundary.tsx  KeyboardShortcutsOverlay.tsx
src/components/shell/: AppShell.css  AppShell.tsx  BootScreen.css  BootScreen.tsx  ProgressScreen.tsx  Sidebar.css  Sidebar.tsx  StatusBar.css  StatusBar.tsx  TopBar.css  TopBar.tsx
src/components/ui/: Button.css  Button.tsx  ConfirmDialog.css  ConfirmDialog.tsx  Field.css  Field.tsx  Icon.tsx  Logo.tsx  Setting.css  Setting.tsx  Toggle.css  Toggle.tsx
src/lib/: ipc.ts  keyboard.ts  paths.ts  projects.ts  store.ts  types.ts  window-state.ts
src/screens/: Archive.tsx  Dashboard.tsx  DeploymentManager.tsx  Docs.tsx  Editor.tsx  EditorWindow.tsx  NewProjectWizard.tsx  Onboarding.tsx  Plugins.tsx  ProjectsWindow.tsx  Publish.tsx  Settings.tsx  SettingsKeyboard.css  docs.css  screens.css
src/styles/: global.css  reset.css  tokens.css
