[package]
name = "scaffold"
version = "0.2.0"
description = "Local-first visual React site builder"
authors = ["Scaffold"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "scaffold_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds where `devUrl` pointing to the
# dev server is disabled. Toggles via `tauri dev` automatically.
custom-protocol = ["tauri/custom-protocol"]
